@@ -2850,7 +2850,7 @@ rb_thread_reset_timer_thread(void)
 void
 rb_thread_start_timer_thread(void)
 {
-    system_working = 1;
+    system_working++;
     rb_thread_create_timer_thread();
 }
 
